--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.1.4",
     "@types/node": "20.3.0",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
