--- a/package.json
+++ b/package.json
@@ -23,18 +23,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ant-design/icons": "^5.1.4",
-    "@nextui-org/react": "1.0.0-beta.13",
+    "@ant-design/icons": "5.1.4",
+    "@nextui-org/react": "2.0.1",
     "@types/node": "20.3.0",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
-    "autoprefixer": "10.4.14",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
+    "framer-motion": "10.15.0",
     "next": "13.4.5",
-    "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.27",
+    "tailwindcss": "^3.3.3"
   }
 }
