chore: predev scrpt to lint cuz no husky/precommit

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "semantic"
   ],
   "scripts": {
+    "predev": "next lint --fix",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
