--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/node": "20.3.0",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
+    "@vercel/analytics": "^1.0.2",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
     "framer-motion": "10.15.0",
