feat: Setup Google Calendar API
Instead of using the home-made HTTP api that we were using, I decided to
just switch to the official Google Calendar API.

Code is now much cleaner and should be much more readable.

The whole weird calendar initialization outside of any functions is
because there's only meant to be one global instance for authentication
and it doesn't like when you make multiple :/

It also works now (big plus)

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "5.1.4",
+    "@googleapis/calendar": "^9.1.1",
     "@nextui-org/react": "2.0.1",
     "@types/node": "20.3.0",
     "@types/react": "18.2.12",
@@ -40,6 +41,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
+    "encoding": "^0.1.13",
     "postcss": "^8.4.27",
     "tailwindcss": "^3.3.3"
   }
