linting rules fixed

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,9 +23,9 @@
 				"beforeClosing": "never"
 			}
 		],
-		"jsx-quotes": [2, "prefer-double"],
+		"jsx-quotes": [2, "prefer-double"]
 		// <-- end react -->
-		"semi": ["warn", "always"],
-		"quotes": [1, "double", { "avoidEscape": true, "allowTemplateLiterals": true }]
+		//"semi": ["warn", "always"]
+		//"quotes": [1, "double", { "avoidEscape": true, "allowTemplateLiterals": true }]
 	}
 }
