--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,8 +22,8 @@
 				"afterOpening": "never",
 				"beforeClosing": "never"
 			}
-		],
-		"jsx-quotes": [2, "prefer-double"]
+		]
+		//"jsx-quotes": [2, "prefer-double"]
 		// <-- end react -->
 		//"semi": ["warn", "always"]
 		//"quotes": [1, "double", { "avoidEscape": true, "allowTemplateLiterals": true }]
